[gd_scene load_steps=11 format=3 uid="uid://bp6yn0qw2s6ua"]

[ext_resource type="Theme" uid="uid://bm1rvmngc833v" path="res://assets/themes/theme.tres" id="1_tkk7t"]
[ext_resource type="Script" path="res://src/ui/components/discover/discover.gd" id="2_f08es"]
[ext_resource type="Script" path="res://src/ui/components/discover/carrousel/discover_carrousel.gd" id="3_s0fys"]
[ext_resource type="PackedScene" uid="uid://3de823q04ptd" path="res://src/ui/components/discover/carrousel/discover_carrousel.tscn" id="3_s5vyg"]
[ext_resource type="FontFile" uid="uid://hqi2efd5kd17" path="res://assets/themes/fonts/inter/Inter-Bold.ttf" id="4_77psv"]
[ext_resource type="PackedScene" uid="uid://ci4mkq5dpxbys" path="res://src/ui/components/discover/places/places_generator.tscn" id="4_q55yj"]
[ext_resource type="PackedScene" uid="uid://nexo8k0ub5ty" path="res://src/ui/components/discover/carrousel/discover_carrousel_item.tscn" id="5_psuac"]
[ext_resource type="Texture2D" uid="uid://dpippmiepkyeb" path="res://decentraland_logo.png" id="6_iqqe3"]
[ext_resource type="PackedScene" uid="uid://vc72j0sq70jq" path="res://src/ui/components/discover/jump_in/jump_in.tscn" id="9_gh6mh"]
[ext_resource type="Script" path="res://src/ui/components/safe_margin_container/safe_margin_container.gd" id="10_wsgtu"]

[node name="Discover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tkk7t")
script = ExtResource("2_f08es")

[node name="ColorRect_Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.921569, 0.921569, 0.929412, 1)

[node name="SafeMarginContainer" type="MarginContainer" parent="ColorRect_Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_wsgtu")

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect_Background/SafeMarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlacesCustom" type="MarginContainer" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("3_s0fys")

[node name="DiscoverCarrousel" type="VBoxContainer" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesCustom"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Label_Title" type="Label" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesCustom/DiscoverCarrousel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_77psv")
theme_override_font_sizes/font_size = 18
text = "Customs"

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesCustom/DiscoverCarrousel"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="HBoxContainer_Items" type="HBoxContainer" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesCustom/DiscoverCarrousel/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 17

[node name="DiscoverCarrouselItem" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesCustom/DiscoverCarrousel/ScrollContainer/HBoxContainer_Items" instance=ExtResource("5_psuac")]
layout_mode = 2
texture = ExtResource("6_iqqe3")
title = "Goerli Plaza"
description = "Test plaza for testing"
metadata = {
"base_position": "72,-9",
"description": "Test plaza for testing",
"title": "Goerli Plaza",
"world": true,
"world_name": "https://sdk-team-cdn.decentraland.org/ipfs/goerli-plaza-main"
}

[node name="LastVisited" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("generator") instance=ExtResource("3_s5vyg")]
visible = false
layout_mode = 2
generator = NodePath("../PlacesFavorites/PlacesGenerator")
title = "Last Visited"

[node name="PlacesFavorites" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("generator") instance=ExtResource("3_s5vyg")]
visible = false
layout_mode = 2
generator = NodePath("PlacesGenerator")
title = "Favorites"

[node name="PlacesGenerator" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesFavorites" node_paths=PackedStringArray("discover") instance=ExtResource("4_q55yj")]
order_by = 1
only_favorites = true
discover = NodePath("../../../../../..")

[node name="PlacesMostActive" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("generator") instance=ExtResource("3_s5vyg")]
layout_mode = 2
generator = NodePath("PlacesGenerator")
title = "Most Actives"

[node name="PlacesGenerator" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesMostActive" node_paths=PackedStringArray("discover") instance=ExtResource("4_q55yj")]
order_by = 1
discover = NodePath("../../../../../..")

[node name="PlacesWorlds" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("generator") instance=ExtResource("3_s5vyg")]
layout_mode = 2
generator = NodePath("PlacesGenerator")
title = "Worlds"

[node name="PlacesGenerator" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesWorlds" node_paths=PackedStringArray("discover") instance=ExtResource("4_q55yj")]
order_by = 2
only_worlds = true
discover = NodePath("../../../../../..")

[node name="PlacesFeatured" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("generator") instance=ExtResource("3_s5vyg")]
layout_mode = 2
generator = NodePath("PlacesGenerator")
title = "Featured"

[node name="PlacesGenerator" parent="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesFeatured" node_paths=PackedStringArray("discover") instance=ExtResource("4_q55yj")]
order_by = 1
categories = "featured"
discover = NodePath("../../../../../..")

[node name="JumpIn" parent="ColorRect_Background" instance=ExtResource("9_gh6mh")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -299.5
offset_right = 183.0
offset_bottom = 299.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="scroll_ended" from="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesCustom/DiscoverCarrousel/ScrollContainer" to="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesCustom" method="_on_scroll_container_scroll_ended"]
[connection signal="item_pressed" from="ColorRect_Background/SafeMarginContainer/ScrollContainer/VBoxContainer/PlacesCustom/DiscoverCarrousel/ScrollContainer/HBoxContainer_Items/DiscoverCarrouselItem" to="." method="on_item_pressed"]
[connection signal="jump_in" from="ColorRect_Background/JumpIn" to="." method="_on_jump_in_jump_in"]
